// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`uuid.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 78,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "guid_field",
                "is_local": true,
                "location": 87,
                "typeName": {
                  "location": 98,
                  "names": [
                    {
                      "String": {
                        "sval": "uuid",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "text_field",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_DEFAULT",
                      "location": 121,
                      "raw_expr": {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "now",
                              },
                            },
                          ],
                          "location": 129,
                        },
                      },
                    },
                  },
                ],
                "is_local": true,
                "location": 105,
                "typeName": {
                  "location": 116,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "guid2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "guid_field",
                "is_local": true,
                "location": 23,
                "typeName": {
                  "location": 34,
                  "names": [
                    {
                      "String": {
                        "sval": "uuid",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "text_field",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_DEFAULT",
                      "location": 57,
                      "raw_expr": {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "now",
                              },
                            },
                          ],
                          "location": 65,
                        },
                      },
                    },
                  },
                ],
                "is_local": true,
                "location": 41,
                "typeName": {
                  "location": 52,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 64,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 58,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 83,
                          "sval": {
                            "sval": "11111111-1111-1111-1111-111111111111F",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 32,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 26,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 51,
                          "sval": {
                            "sval": "{11111111-1111-1111-1111-11111111111}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 52,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 46,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 71,
                          "sval": {
                            "sval": "111-11111-1111-1111-1111-111111111111",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 19,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "{22222222-2222-2222-2222-222222222222 ",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 35,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 29,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 54,
                          "sval": {
                            "sval": "11111111-1111-1111-G111-111111111111",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 19,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "11+11111-1111-1111-1111-111111111111",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 40,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 58,
                          "sval": {
                            "sval": "11",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 64,
                          "sval": {
                            "sval": "uuid",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 40,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "11",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 41,
                                  "sval": {
                                    "sval": "uuid",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 52,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 46,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 71,
                          "sval": {
                            "sval": "11111111-1111-1111-1111-111111111111",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 19,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "{22222222-2222-2222-2222-222222222222}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 19,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "3f3e3c3b3a3039383736353433a2313e",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 34 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 57,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 41,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "guid_field",
                        },
                      },
                    ],
                    "location": 41,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 42,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "guid_field",
                        },
                      },
                    ],
                    "location": 57,
                  },
                },
                "sortby_dir": "SORTBY_ASC",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 26,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "guid_field",
                        },
                      },
                    ],
                    "location": 26,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "guid_field",
                        },
                      },
                    ],
                    "location": 39,
                  },
                },
                "sortby_dir": "SORTBY_DESC",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "guid_field",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 42,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 28,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "guid_field",
                      },
                    },
                  ],
                  "location": 54,
                },
              },
              "location": 65,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 67,
                  "sval": {
                    "sval": "3f3e3c3b-3a30-3938-3736-353433a2313e",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 43,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "guid_field",
                      },
                    },
                  ],
                  "location": 55,
                },
              },
              "location": 66,
              "name": [
                {
                  "String": {
                    "sval": "<>",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 69,
                  "sval": {
                    "sval": "11111111111111111111111111111111",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 47 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 42,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 28,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "guid_field",
                      },
                    },
                  ],
                  "location": 54,
                },
              },
              "location": 65,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 67,
                  "sval": {
                    "sval": "22222222-2222-2222-2222-222222222222",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 43,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "guid_field",
                      },
                    },
                  ],
                  "location": 55,
                },
              },
              "location": 66,
              "name": [
                {
                  "String": {
                    "sval": "<=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 69,
                  "sval": {
                    "sval": "22222222-2222-2222-2222-222222222222",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 53 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 42,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 28,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "guid_field",
                      },
                    },
                  ],
                  "location": 54,
                },
              },
              "location": 65,
              "name": [
                {
                  "String": {
                    "sval": ">",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 67,
                  "sval": {
                    "sval": "22222222-2222-2222-2222-222222222222",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 43,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "guid_field",
                      },
                    },
                  ],
                  "location": 55,
                },
              },
              "location": 66,
              "name": [
                {
                  "String": {
                    "sval": ">=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 69,
                  "sval": {
                    "sval": "22222222-2222-2222-2222-222222222222",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 59 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "guid1_btree",
          "indexParams": [
            {
              "IndexElem": {
                "name": "guid_field",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 68,
            "relname": "guid1",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "hash",
          "idxname": "guid1_hash",
          "indexParams": [
            {
              "IndexElem": {
                "name": "guid_field",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 29,
            "relname": "guid1",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 63 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "guid1_unique_btree",
          "indexParams": [
            {
              "IndexElem": {
                "name": "guid_field",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 65,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "unique": true,
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 34,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 28,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 53,
                          "sval": {
                            "sval": "11111111-1111-1111-1111-111111111111",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 68 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 82,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 68,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 68,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "relkind",
                            },
                          },
                        ],
                        "location": 97,
                      },
                    },
                    "location": 104,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 105,
                        "sval": {
                          "sval": "i",
                        },
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_LIKE",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "relname",
                            },
                          },
                        ],
                        "location": 113,
                      },
                    },
                    "location": 121,
                    "name": [
                      {
                        "String": {
                          "sval": "~~",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 126,
                        "sval": {
                          "sval": "guid%",
                        },
                      },
                    },
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 109,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 74,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 68,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 93,
                          "sval": {
                            "sval": "44444444-4444-4444-4444-444444444444",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 74 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 19,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "guid2",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "11111111-1111-1111-1111-111111111111",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 19,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "guid2",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "{22222222-2222-2222-2222-222222222222}",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 76 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 19,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "guid2",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "3f3e3c3b3a3039383736353433a2313e",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "JoinExpr": {
                "jointype": "JOIN_INNER",
                "larg": {
                  "RangeVar": {
                    "alias": {
                      "aliasname": "g1",
                    },
                    "inh": true,
                    "location": 36,
                    "relname": "guid1",
                    "relpersistence": "p",
                  },
                },
                "quals": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "g1",
                            },
                          },
                          {
                            "String": {
                              "sval": "guid_field",
                            },
                          },
                        ],
                        "location": 68,
                      },
                    },
                    "location": 82,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "g2",
                            },
                          },
                          {
                            "String": {
                              "sval": "guid_field",
                            },
                          },
                        ],
                        "location": 84,
                      },
                    },
                  },
                },
                "rarg": {
                  "RangeVar": {
                    "alias": {
                      "aliasname": "g2",
                    },
                    "inh": true,
                    "location": 56,
                    "relname": "guid2",
                    "relpersistence": "p",
                  },
                },
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 22,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 22,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "JoinExpr": {
                "jointype": "JOIN_LEFT",
                "larg": {
                  "RangeVar": {
                    "alias": {
                      "aliasname": "g1",
                    },
                    "inh": true,
                    "location": 22,
                    "relname": "guid1",
                    "relpersistence": "p",
                  },
                },
                "quals": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "g1",
                            },
                          },
                          {
                            "String": {
                              "sval": "guid_field",
                            },
                          },
                        ],
                        "location": 53,
                      },
                    },
                    "location": 67,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "g2",
                            },
                          },
                          {
                            "String": {
                              "sval": "guid_field",
                            },
                          },
                        ],
                        "location": 69,
                      },
                    },
                  },
                },
                "rarg": {
                  "RangeVar": {
                    "alias": {
                      "aliasname": "g2",
                    },
                    "inh": true,
                    "location": 41,
                    "relname": "guid2",
                    "relpersistence": "p",
                  },
                },
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "NullTest": {
              "arg": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "g2",
                      },
                    },
                    {
                      "String": {
                        "sval": "guid_field",
                      },
                    },
                  ],
                  "location": 89,
                },
              },
              "location": 103,
              "nulltesttype": "IS_NULL",
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TruncateStmt": {
          "behavior": "DROP_RESTRICT",
          "relations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 30,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 84 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 20,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "gen_random_uuid",
                              },
                            },
                          ],
                          "location": 40,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 85 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 20,
                "name": "guid_field",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "guid1",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "gen_random_uuid",
                              },
                            },
                          ],
                          "location": 40,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 86 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 40,
                "relname": "guid1",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "agg_distinct": true,
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "guid_field",
                              },
                            },
                          ],
                          "location": 23,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`uuid.sql > line 87 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_CASCADE",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "guid1",
                    },
                  },
                ],
              },
            },
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "guid2",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
